--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basit HTML Örneği</title>
 </head>
 <body>
+    <header>
+        <h1>Hoş Geldiniz</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Anasayfa</a></li>
+                <li><a href="#about">Hakkında</a></li>
+                <li><a href="#contact">İletişim</a></li>
+            </ul>
+        </nav>
+    </header>
 
-</body>
-</html>
+    <main>
+        <section id="home">
+            <h2>Anasayfa</h2>
+            <p>Bu basit bir HTML sayfasıdır.</p>
+        </section>
+
+        <section id="about">
+            <h2>Hakkında</h2>
+            <p>Bu sayfa, HTML'in
