--- a/acc/index.html
+++ b/acc/index.html
@@ -101,11 +101,9 @@
         <div class="button-container">
             <button id="loginButton" onclick="login()">Giriş</button>
             <button class="secondary-button" onclick="toggleAction()">Hesabın Yok mu?</button>
-        </div>
         <div class="terms">
-            Kaydolarak <a href="emncenter.github.io/gizlilikvehizmet" target="_blank">EMN Studio Gizlilik Sözleşmesi ve Hizmet Şartları</a>nı kabul edersiniz!
-        </div>
-    </div>
+    Kaydolarak <a href="https://emncenter.github.io/gizlilikvehizmet" target="_blank">EMN Studio Gizlilik Sözleşmesi ve Hizmet Şartları</a>'nı kabul edersiniz!
+</div>
 
     <script>
         function login() {
