--- a/acc/index.html
+++ b/acc/index.html
@@ -102,7 +102,7 @@
             <button id="loginButton" onclick="login()">Giriş</button>
             <button class="secondary-button" onclick="toggleAction()">Hesabın Yok mu?</button>
         <div class="terms">
-    Kaydolarak <a href="https://emncenter.github.io/gizlilikvehizmet" target="_blank">EMN Studio Gizlilik Sözleşmesi ve Hizmet Şartları</a>'nı kabul edersiniz!
+    Kaydolarak <a href="https://emncenter.github.iot" target="_blank">EMN Studio Gizlilik Sözleşmesi ve Hizmet Şartları</a>'nı kabul edersiniz!
 </div>
 
     <script>
