--- a/acc/index.html
+++ b/acc/index.html
@@ -101,9 +101,10 @@
         <div class="button-container">
             <button id="loginButton" onclick="login()">Giriş</button>
             <button class="secondary-button" onclick="toggleAction()">Hesabın Yok mu?</button>
-        <div class="terms">
-    Kaydolarak <a href="https://emncenter.github.iot" target="_blank">EMN Studio Gizlilik Sözleşmesi ve Hizmet Şartları</a>'nı kabul edersiniz!
+<div class="terms">
+    Kaydolarak <a href="https://emncenter.github.io/gizlilikvehizmet" target="_blank">EMN Studio Gizlilik Sözleşmesi ve Hizmet Şartları</a>'nı kabul edersiniz!
 </div>
+
 
     <script>
         function login() {
