--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             font-size: 16px;
         }
         .container button:hover {
-            background-color: #0056b3;
+            background-color: #34a853;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Hoş Geldiniz</h1>
+        <h1>EMN Center'a Hoş Geldiniz</h1>
         <p>Hesabınız yoksa veya giriş yapmadıysanız lütfen aşağıdaki butona tıklayın.</p>
-        <button onclick="window.location.href='https://emncenter.github.io/acc/'">Hesap Aç / Giriş Yap</button>
+        <button onclick="window.location.href='https://emncenter.github.io/acc/'">Kayıt Ol / Giriş Yap</button>
     </div>
 </body>
 </html>
