--- a/index.html
+++ b/index.html
@@ -1,41 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EMN Center</title>
+    <title>Giriş Yap / Kaydol</title>
     <style>
         body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
-        .container {
-            text-align: center;
-        }
-        .container button {
-            background-color: #007BFF;
             color: white;
-            border: none;
-            padding: 15px 30px;
-            border-radius: 5px;
-            cursor: pointer;
+        }
+        .login-container {
+            background-color: #fff;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 400px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .login-container h2 {
+            margin-bottom: 20px;
+            color: #333;
+        }
+        .login-container input {
+            width: 100%;
+            padding: 15px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
             font-size: 16px;
         }
-        .container button:hover {
-            background-color: #34a853;
+        .login-container .button-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 20px;
+        }
+        .login-container .button-container button {
+            flex: 0.45;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+        .login-container .button-container button:hover {
+            background-color: #45a049;
+        }
+        .login-container .button-container .secondary-button {
+            flex: 0.45;
+            background-color: #ccc;
+            color: #333;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+            transition: background-color 0.3s ease;
+        }
+        .login-container .button-container .secondary-button:hover {
+            background-color: #bbb;
+        }
+        .login-container .terms {
+            margin-top: 10px;
+            font-size: 12px;
+            color: #666;
+            display: none; /* Başlangıçta gizli */
+        }
+        .login-container .terms a {
+            color: #007bff; /* Mavi renk */
+            text-decoration: none;
+        }
+        .login-container .terms a:hover {
+            text-decoration: underline;
+        }
+        .login-container.active .terms {
+            display: block; /* Toggle edildiğinde görünür */
+        }
+        .output-container {
+            margin-top: 20px;
+            text-align: center;
+        }
+        .output-container p {
+            margin: 5px 0;
+            color: black; /* Metin rengini siyah yap */
+        }
+        @media (max-width: 400px) {
+            .login-container .button-container button, .login-container .button-container .secondary-button {
+                flex: 1;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>EMN Center'a Hoş Geldiniz</h1>
-        <p>Hesabınız yoksa veya giriş yapmadıysanız lütfen aşağıdaki butona tıklayın.</p>
-        <button onclick="window.location.href='https://emncenter.github.io/acc/'">Kayıt Ol / Giriş Yap</button>
+    <div class="login-container">
+        <h2 id="action-text">EMN Center'a Giriş Yap</h2>
+        <input type="text" id="username" placeholder="Kullanıcı Adı" autocomplete="off"><br>
+        <input type="password" id="password" placeholder="Şifre"><br>
+        <div class="button-container">
+            <button id="loginButton" onclick="displayInput()">Giriş</button>
+            <button class="secondary-button" onclick="toggleAction()">Hesabın Yok mu?</button>
+        </div>
+        <div class="terms">
+            Kaydolarak <a href="https://emncenter.github.io/gizlilikvehizmet" target="_blank">EMN Studio Gizlilik Sözleşmesi ve Hizmet Şartlarını </a> kabul edersiniz!
+        </div>
     </div>
+    <div class="output-container" id="output-container">
+        <p id="username-output"></p>
+        <p id="password-output"></p>
+    </div>
+
+    <script>
+        function displayInput() {
+            var username = document.getElementById("username").value;
+            var password = document.getElementById("password").value;
+            var outputContainer = document.getElementById("output-container");
+            var usernameOutput = document.getElementById("username-output");
+            var passwordOutput = document.getElementById("password-output");
+
+            usernameOutput.textContent = "Kullanıcı Adı: " + username;
+            passwordOutput.textContent = "Şifre: " + password;
+            outputContainer.style.display = "block";
+        }
+
+        function toggleAction() {
+            var actionText = document.getElementById("action-text");
+            var loginButton = document.getElementById("loginButton");
+            var container = document.querySelector('.login-container');
+
+            if (actionText.textContent === "EMN Center'a Giriş Yap") {
+                actionText.textContent = "EMN Center'a Kaydol";
+                loginButton.textContent = "Kaydol";
+                document.querySelector('.secondary-button').textContent = "Hesabın Var mı?";
+                container.classList.add('active'); // Terms'i göster
+            } else {
+                actionText.textContent = "EMN Center'a Giriş Yap";
+                loginButton.textContent = "Giriş";
+                document.querySelector('.secondary-button').textContent = "Hesabın Yok mu?";
+                container.classList.remove('active'); // Terms'i gizle
+            }
+        }
+    </script>
 </body>
 </html>
