--- a/acc/index.html
+++ b/acc/index.html
@@ -89,10 +89,11 @@
         }
         .output-container {
             margin-top: 20px;
-            background-color: #333;
-            padding: 10px;
-            border-radius: 4px;
-            display: none; /* Başlangıçta gizli */
+            text-align: center;
+        }
+        .output-container p {
+            margin: 5px 0;
+            color: black; /* Metin rengini siyah yap */
         }
         @media (max-width: 400px) {
             .login-container .button-container button, .login-container .button-container .secondary-button {
