--- a/gizlilikvehizmet/index.html
+++ b/gizlilikvehizmet/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gizlilik Politikası ve Hizmet Şartları</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p {
+            margin-bottom: 10px;
+        }
+        ul {
+            margin-left: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Gizlilik Politikası</h1>
 
+        <h2>VERİ TOPLAMA AMACIMIZ</h2>
+        <p>Topladığımız verileri şu nedenlerle kullanırız:</p>
+        <ul>
+            <li>Hizmetlerimizi geliştirmek</li>
+            <li>Hizmetlerimizi değerlendirmek</li>
+            <li>Hizmetlerimizi kişiselleştirmek</li>
+        </ul>
+
+        <h2>TOPLADIĞIMIZ VERİLER</h2>
+        <p>Bir EMN Studio hizmeti kullandığınız da, adınız, dil tercihleriniz, hizmet kullanım bilgileriniz, hata raporları gibi verileri toplarız.</p>
+
+        <h2>VERİLERİNİZİN PAYLAŞIMI</h2>
+        <p>Toplanan verileriniz, yalnızca EMN Studio ekibi ve EMN Studio hizmetlerini kullanan diğer kullanıcılarla paylaşılabilir. Bunun dışında verileriniz hiçbir kişi ve şirketle paylaşılmaz.</p>
+
+        <h2>VERİLERİNİZİN GÜVENLİĞİ</h2>
+        <p>'EMN Hesabınız' ve tüm verileriniz Google Firebase ve TurboWarp Cloud Veriables hizmetleri aracılığıyla saklanır ve korunur. Veri ihlali durumunda, EMN Studio hiç bir sorumluluk kabul etmez.</p>
+
+        <h2>ÇEREZ KULLANIMI</h2>
+        <p>Bazı EMN Studio hizmetleri çerezleri kullanır. Bu hizmetleri kullandığınızda çerezleri kabul etmiş olursunuz.</p>
+
+
+
+        <p>Hizmetlerimizi kullanarak bu gizlilik politikasını kabul etmiş olursunuz ve bunu geri alamazsınız. Kullandığımız ve kullandığınız 3. taraf hizmetlerin gizlilik politikasını okumak ve bilmek sizin sorumluluğunuzdur.</p>
+
+        <h1>Hizmet Şartları</h1>
+
+        <h2>TELİF HAKKI</h2>
+
+        <h2>YASAL SÜREÇLER</h2>
+        <p>Siz kullanıcılarımız ve EMN Studio arasında oluşabilecek tüm yasal süreçler, Türkiye Cumhuriyeti Anayasası ve geçerli Türk yasaları çerçevesinde yürütülecektir. </p>
+
+        <h2>CİHAZ SORUNLARI</h2>
+        <p>Hizmetlerimizi kullanırken cihazınız ile ilgili doğabilecek sorunlardan (örn: cihazın fazla ısınması) EMN Studio sorumlu değildir.</p>
+
+        <h2></h2>
+        <p>Bu hizmet şartları zaman zaman güncellenebilir ve bu sayfada yayınlanacaktır. Güncellemeleri takip etmek sizin sorumluluğunuzdadır.</p>
+    </div>
+</body>
+</html>
